现在压缩文件可以选择多文件